--- a/day1-toy-project/build.gradle
+++ b/day1-toy-project/build.gradle
@@ -1,7 +1,11 @@
 group 'com.skt.spark'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'java'
 apply plugin: 'scala'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
+
 
 buildscript {
     repositories {
@@ -14,6 +18,35 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    zip64 true
+    archiveName = "spark-study.jar"
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    manifest {
+        attributes 'Main-Class': 'com.skt.spark.MyApp'
+    }
+
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
+
+}
+
+sourceSets {
+    main {
+        scala {
+            srcDirs = ['src/main/scala']
+        }
+    }
+}
+
 dependencies{
-    compile "org.apache.spark:spark-core_2.10:1.6.1"
+    compile "org.scala-lang:scala-library:"+scalaVersion
+    compile "org.scala-lang:scala-reflect:"+scalaVersion
+    compile "org.scala-lang:scala-compiler:"+scalaVersion
+
+    compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.3.1'
+    compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.3.1'
 }
